processing stopedIndexing